--- a/sets/set5/set5_prob3.ipynb
+++ b/sets/set5/set5_prob3.ipynb
@@ -1,80 +1,97 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "set5_prob3.ipynb",
-      "provenance": [],
-      "collapsed_sections": [
-        "h9aBEkZD5wb2"
-      ],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/charlesincharge/Caltech-CS155-2022/blob/main/sets/set5/set5_prob3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/pw0908/Caltech-CS155-2022/blob/main/sets/set5/set5_prob3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "ViXzmmMF4T9_"
+      },
       "source": [
         "## Set 5\n",
         "## 3. Word2Vec \\*\\*Principles**"
-      ],
-      "metadata": {
-        "id": "ViXzmmMF4T9_"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#### Preparation"
-      ],
       "metadata": {
         "id": "HXT_eNcB93ue"
-      }
+      },
+      "source": [
+        "#### Preparation"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# download the helper function\n",
-        "!wget -O P3CHelpers.py https://raw.githubusercontent.com/charlesincharge/Caltech-CS155-2022/main/sets/set5/P3CHelpers.py"
-      ],
+      "execution_count": 1,
       "metadata": {
         "id": "2wZbd6FeH7cY"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "--2022-02-15 22:03:34--  https://raw.githubusercontent.com/charlesincharge/Caltech-CS155-2022/main/sets/set5/P3CHelpers.py\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 4939 (4.8K) [text/plain]\n",
+            "Saving to: ‘P3CHelpers.py’\n",
+            "\n",
+            "P3CHelpers.py       100%[===================>]   4.82K  --.-KB/s    in 0.001s  \n",
+            "\n",
+            "2022-02-15 22:03:34 (4.92 MB/s) - ‘P3CHelpers.py’ saved [4939/4939]\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "# download the helper function\n",
+        "!wget -O P3CHelpers.py https://raw.githubusercontent.com/charlesincharge/Caltech-CS155-2022/main/sets/set5/P3CHelpers.py"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# download the dataset\n",
-        "!wget -O dr_seuss.txt https://raw.githubusercontent.com/charlesincharge/Caltech-CS155-2022/main/sets/set5/data/dr_seuss.txt"
-      ],
+      "execution_count": 2,
       "metadata": {
         "id": "LmmdYcVUH9D8"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "--2022-02-15 22:03:37--  https://raw.githubusercontent.com/charlesincharge/Caltech-CS155-2022/main/sets/set5/data/dr_seuss.txt\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 8810 (8.6K) [text/plain]\n",
+            "Saving to: ‘dr_seuss.txt’\n",
+            "\n",
+            "dr_seuss.txt        100%[===================>]   8.60K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2022-02-15 22:03:38 (24.6 MB/s) - ‘dr_seuss.txt’ saved [8810/8810]\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "# download the dataset\n",
+        "!wget -O dr_seuss.txt https://raw.githubusercontent.com/charlesincharge/Caltech-CS155-2022/main/sets/set5/data/dr_seuss.txt"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "Groxh_Rz4QLB"
       },
@@ -84,21 +101,27 @@
         "from P3CHelpers import *\n",
         "import torch\n",
         "import torch.nn as nn\n",
-        "import torch.optim as optim"
+        "import torch.optim as optim\n",
+        "from torch.utils.data import Dataset"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "h9aBEkZD5wb2"
+      },
       "source": [
         "#### Problem D: \n",
         "Fill in the generate_traindata and find_most_similar_pairs functions."
-      ],
-      "metadata": {
-        "id": "h9aBEkZD5wb2"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 25,
+      "metadata": {
+        "id": "UChXkrvs7OF0"
+      },
+      "outputs": [],
       "source": [
         "def get_word_repr(word_to_index, word):\n",
         "    \"\"\"\n",
@@ -141,20 +164,32 @@
         "    trainX = []\n",
         "    trainY = []\n",
         "\n",
-        "    ##############################################################\n",
-        "    # TODO: Implement this function, populating trainX and trainY\n",
-        "    ##############################################################\n",
-        "    \n",
-        "    return np.array(trainX), np.array(trainY)"
-      ],
-      "metadata": {
-        "id": "UChXkrvs7OF0"
-      },
-      "execution_count": null,
-      "outputs": []
+        "    for i in range(len(word_list)):\n",
+        "        x = get_word_repr(word_to_index, word_list[i])\n",
+        "        for j in range(i-window_size,i+window_size+1):\n",
+        "            if j>=0 and j<len(word_list):\n",
+        "                trainX.append(x)\n",
+        "                y = get_word_repr(word_to_index, word_list[j])\n",
+        "                trainY.append(y)\n",
+        "    return np.array(trainX), np.array(trainY)\n",
+        "\n",
+        "class word2vectorDataset(Dataset):\n",
+        "    def __init__(self, X, y):\n",
+        "        self.X = torch.tensor(X).float()\n",
+        "        self.y = torch.tensor(np.argmax(y, axis = 1)).long()\n",
+        "    def __len__(self):\n",
+        "        return self.X.shape[0]\n",
+        "    def __getitem__(self, index):  \n",
+        "          return self.X[index,:], self.y[index]"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 32,
+      "metadata": {
+        "id": "OoaUtBqd7V-A"
+      },
+      "outputs": [],
       "source": [
         "def find_most_similar_pairs(filename, num_latent_factors):\n",
         "    \"\"\"\n",
@@ -171,67 +206,130 @@
         "\n",
         "    # Create word dictionary\n",
         "    word_to_index = generate_onehot_dict(sample_text)\n",
-        "    print(\"Textfile contains %s unique words\"%len(word_to_index))\n",
+        "    \n",
         "    # Create training data\n",
         "    trainX, trainY = generate_traindata(sample_text, word_to_index)\n",
-        "\n",
-        "    ##############################################################\n",
-        "    # TODO: 1) Create and train model in Pytorch.      \n",
-        "    ##############################################################\n",
-        "\n",
-        "    # vocab_size = number of unique words in our text file. Will be useful \n",
-        "    # when adding layers to your neural network\n",
+        "    train_dataset = word2vectorDataset(trainX, trainY)\n",
+        "    print(len(word_to_index))\n",
         "    vocab_size = len(word_to_index)\n",
+        "    model = nn.Sequential(nn.Linear(vocab_size, 10),nn.Linear(10, vocab_size),)\n",
         "\n",
-        "    ##############################################################\n",
-        "    # TODO: 2) Extract weights for hidden layer\n",
-        "    ##############################################################\n",
-        "    \n",
-        "    # set weights variable below\n",
-        "    weights = None\n",
-        "    \n",
+        "    optimizer = torch.optim.Adam(model.parameters(), lr=1e-3)\n",
+        "    loss_fn = nn.CrossEntropyLoss()\n",
+        "\n",
+        "    train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=128, shuffle=True)\n",
+        "\n",
+        "    for epoch in range(20):\n",
+        "        for batch_idx, (data, target) in enumerate(train_loader):\n",
+        "            optimizer.zero_grad()\n",
+        "            output = model(data)\n",
+        "            loss = loss_fn(output, target)\n",
+        "            loss.backward()\n",
+        "            optimizer.step()\n",
+        "    weights = list(model.parameters())[2].detach().numpy()\n",
+        "    print(weights.shape)\n",
         "    # Find and print most similar pairs\n",
         "    similar_pairs = most_similar_pairs(weights, word_to_index)\n",
         "    for pair in similar_pairs[:30]:\n",
         "        print(pair)"
-      ],
-      "metadata": {
-        "id": "OoaUtBqd7V-A"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "xFBMhtCJ8LyA"
+      },
       "source": [
         "### Problem E-H:\n",
         "Run your model on drseuss.txt and answer questions from E through H."
-      ],
-      "metadata": {
-        "id": "xFBMhtCJ8LyA"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "find_most_similar_pairs('dr_seuss.txt', 10)"
-      ],
+      "execution_count": 36,
       "metadata": {
         "id": "bR7ZicNJ6tyN"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "308\n",
+            "(308, 10)\n",
+            "Pair(eight, nine), Similarity: 0.98720694\n",
+            "Pair(nine, eight), Similarity: 0.98720694\n",
+            "Pair(dad, zeds), Similarity: 0.96925426\n",
+            "Pair(zeds, dad), Similarity: 0.96925426\n",
+            "Pair(he, drink), Similarity: 0.9666724\n",
+            "Pair(drink, he), Similarity: 0.9666724\n",
+            "Pair(likes, drink), Similarity: 0.96280104\n",
+            "Pair(shoe, off), Similarity: 0.96162623\n",
+            "Pair(off, shoe), Similarity: 0.96162623\n",
+            "Pair(upon, heads), Similarity: 0.96127015\n",
+            "Pair(heads, upon), Similarity: 0.96127015\n",
+            "Pair(thin, four), Similarity: 0.95897\n",
+            "Pair(four, thin), Similarity: 0.95897\n",
+            "Pair(ink, drink), Similarity: 0.9581423\n",
+            "Pair(yet, wire), Similarity: 0.9571183\n",
+            "Pair(wire, yet), Similarity: 0.9571183\n",
+            "Pair(these, pets), Similarity: 0.95471144\n",
+            "Pair(pets, these), Similarity: 0.95471144\n",
+            "Pair(kind, time), Similarity: 0.95429236\n",
+            "Pair(time, kind), Similarity: 0.95429236\n",
+            "Pair(cut, haircut), Similarity: 0.953977\n",
+            "Pair(haircut, cut), Similarity: 0.953977\n",
+            "Pair(brush, comb), Similarity: 0.9531305\n",
+            "Pair(comb, brush), Similarity: 0.9531305\n",
+            "Pair(fly, yet), Similarity: 0.9529114\n",
+            "Pair(teeth, gold), Similarity: 0.9518151\n",
+            "Pair(gold, teeth), Similarity: 0.9518151\n",
+            "Pair(sings, these), Similarity: 0.950456\n",
+            "Pair(us, comes), Similarity: 0.9501676\n",
+            "Pair(comes, us), Similarity: 0.9501676\n"
+          ]
+        }
+      ],
+      "source": [
+        "find_most_similar_pairs('dr_seuss.txt', 10)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "1OypGn399owV"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [
+        "h9aBEkZD5wb2"
+      ],
+      "include_colab_link": true,
+      "name": "set5_prob3.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.4"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
