--- a/sets/set5/set5template.tex
+++ b/sets/set5/set5template.tex
@@ -313,7 +313,7 @@ In your implementation, you should:
 \end{itemize}
 
 \begin{solution}
- Link:
+ Link: \url{https://colab.research.google.com/drive/1vJrEj5onUSb_hYofvL0nQI305xGSPvd4?usp=sharing}
 
 \end{solution}
 
@@ -464,7 +464,7 @@ Fill out the TODOs in the skeleton code; specifically, add code where indicated 
 
 
 \begin{solution}
- Link:
+ Link: \url{https://colab.research.google.com/drive/1NOq8Hxho0WCnvBF1q5omHh35n6LKXkLj?usp=sharing}
 \end{solution}
 
 \subsection{Running the code}
@@ -486,7 +486,7 @@ What is the dimension of the weight matrix of your output layer?
 \problem[1]
 List the top 30 pairs of most similar words that your model generates.
 \begin{solution}
-	
+
 	Pair(likes, drink), Similarity: 0.9823513 \\
 	Pair(eight, nine), Similarity: 0.98720694 \\
 	Pair(nine, eight), Similarity: 0.98720694 \\
