--- a/sets/set6/set6_empty.tex
+++ b/sets/set6/set6_empty.tex
@@ -136,6 +136,7 @@ For each of the six trained HMMs, find the max-probability state sequence for ea
 
 In your report, show your results on the 6 files. (Copy-pasting the results of the cell for \texttt{2A} suffices.)
 \begin{solution}
+  Link: \url{https://colab.research.google.com/drive/1pL8tB6NVid0nKR_rG-9xLFb4Hy56jIWL?usp=sharing}
 File \#0:\\
 Emission Sequence             Max Probability State Sequence\\
 \footnotesize\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\#\\
